--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@headlessui/react": "^2.2.4",
+    "emailjs-com": "^3.2.0",
     "firebase": "^11.8.1",
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0"
   },
