--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "@emailjs/browser": "^4.4.1",
     "@headlessui/react": "^2.2.4",
     "emailjs-com": "^3.2.0",
-
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
